--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cloudinary/url-gen": "^1.8.0",
+    "cloudinary": "^1.29.1",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
